--- a/styles.css
+++ b/styles.css
@@ -113,8 +113,24 @@ body {
 }
 
 .lista__item {
-    font-size: 32px;
+    font-size: 32px;    
+}
+
+.rodape__texto {
+    margin: 2em 0;
+    color: var(--cinza-secundario);
+    font-size: 14px;
+}
+
+.lista__link a{
+    text-decoration: none;
     color: var(--branco-principal);
+    margin-left: 3em;
+}
+.rodape__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
 }
 
 .rodape {
@@ -122,24 +138,9 @@ body {
     margin: 5em 3em;
 }
 
-.rodape__lista {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    margin-top: 1em;
-}
-
-.lista__link a{
-    text-decoration: none;
-    color: var(--branco-principal);
-    margin-left: 1em;
-}
-
-.rodape__texto {
-    margin: 1em 0;
-    color: var(--cinza-secundario);
-    font-size: 14px;
-}
+.rodape__logo {
+    margin-bottom: 2em;
+}   
 
 .lista__link a:hover {
     color: var(--botao-azul);
